--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
 			"react-native-safe-area-context": "^4.3.1",
 			"react-native-screens": "^3.14.1",
 			"react-native-vector-icons": "^9.2.0",
-			"@react-native-community/viewpager": "^5.0.11"
+			"@react-native-community/viewpager": "^5.0.11",
+			"@ui-kitten/components": "^5.1.2",
+			"@eva-design/eva": "^2.1.1",
+			"react-native-svg": "^13.0.0"
       },
       "devDependencies": {
         "@babel/core": "^7.12.9",
