--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "mentis",
   "version": "0.1.0",
@@ -11,27 +10,30 @@
     "lint": "eslint ."
   },
   "dependencies": {
-  "@react-navigation/bottom-tabs": "^6.3.1",
-  "@react-navigation/core": "^6.2.1",
-  "@react-navigation/drawer": "^6.4.1",
-  "@react-navigation/elements": "^1.3.3",
-  "@react-navigation/material-bottom-tabs": "^6.2.1",
-  "@react-navigation/material-top-tabs": "^6.2.1",
-  "@react-navigation/native": "^6.0.10",
-  "@react-navigation/native-stack": "^6.7.0",
-  "@react-navigation/routers": "^6.1.0",
-  "@react-navigation/stack": "^6.2.1",
-  "react": "18.0.0",
-  "react-native": "0.69.1",
-  "react-native-gesture-handler": "^2.4.2",
-  "react-native-reanimated": "2.9.1",
-  "react-native-safe-area-context": "^4.3.1",
-  "react-native-screens": "^3.14.1",
-  "react-native-vector-icons": "^9.2.0",
-  "@react-native-community/viewpager": "^5.0.11",
-  "@ui-kitten/components": "^5.1.2",
-  "@eva-design/eva": "^2.1.1",
-  "react-native-svg": "^13.0.0"
+    "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/core": "^6.2.1",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/elements": "^1.3.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/routers": "^6.1.0",
+    "@react-navigation/stack": "^6.2.1",
+    "@ui-kitten/components": "^5.1.2",
+    "amazon-cognito-identity-js": "^5.2.12",
+    "amazon-cognito-identity-js-typescript": "^1.22.0",
+    "react": "18.0.0",
+    "react-native": "0.69.1",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-reanimated": "2.9.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.14.1",
+    "react-native-svg": "^13.0.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
