--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/core": "^6.2.1",
@@ -29,7 +30,7 @@
     "react-native": "0.69.1",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-reanimated": "2.9.1",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.14.1",
     "react-native-svg": "^13.0.0",
     "react-native-vector-icons": "^9.2.0"
