--- a/app/package.json
+++ b/app/package.json
@@ -6,12 +6,14 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "apple": "cd ios && arch -x86_64 pod install && cd ..",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/netinfo": "^9.3.6",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/core": "^6.2.1",
@@ -26,6 +28,7 @@
     "@ui-kitten/components": "^5.1.2",
     "amazon-cognito-identity-js": "^5.2.12",
     "amazon-cognito-identity-js-typescript": "^1.22.0",
+    "aws-amplify": "^5.0.3",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-gesture-handler": "^2.4.2",
