--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,8 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.14.1",
     "react-native-svg": "^13.0.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
