--- a/app/package.json
+++ b/app/package.json
@@ -35,10 +35,12 @@
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-background-timer": "^2.4.1",
+    "react-native-events": "^1.0.21",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-reanimated": "2.9.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.14.1",
+    "react-native-spotify-remote": "^0.3.10",
     "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.23.1"
