--- a/app/amplify/#current-cloud-backend/backend-config.json
+++ b/app/amplify/#current-cloud-backend/backend-config.json
@@ -37,5 +37,12 @@
         }
       }
     }
+  },
+  "function": {
+    "calendlyHook": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
