--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-background-timer": "^2.4.1",
+    "react-native-calendars": "^1.1292.0",
     "react-native-events": "^1.0.21",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-reanimated": "2.9.1",
