Google service account basic implementation

--- a/app/amplify/#current-cloud-backend/backend-config.json
+++ b/app/amplify/#current-cloud-backend/backend-config.json
@@ -39,7 +39,7 @@
     }
   },
   "function": {
-    "calendlyHook": {
+    "googleCalendar": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
