--- a/app/amplify/backend/backend-config.json
+++ b/app/amplify/backend/backend-config.json
@@ -39,7 +39,7 @@
     }
   },
   "function": {
-    "calendlyHook": {
+    "googleCalendar": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
