--- a/app/amplify/backend/function/googleCalendar/src/package.json
+++ b/app/amplify/backend/function/googleCalendar/src/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "aws-serverless-express": "^3.3.5",
-    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "googleapis": "^109.0.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
+    "@types/aws-serverless-express": "^3.3.5",
+    "@types/body-parser": "^1.19.2",
     "@types/node": "^18.11.11",
+    "body-parser": "^1.20.1",
     "typescript": "^4.9.3"
   }
 }
