googleCalendar - error checking & testing

--- a/app/amplify/backend/function/googleCalendar/src/tsconfig.json
+++ b/app/amplify/backend/function/googleCalendar/src/tsconfig.json
@@ -16,6 +16,6 @@
     "baseUrl": ".",
     "outDir": "./",
   },
-  "include": ["ts/"],
+  "include": ["ts/**/*"],
   "exclude": ["node_modules"]
 }
