--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "apple": "cd ios && arch -x86_64 pod install && cd ..",
     "test": "jest",
     "lint": "eslint .",
+    "tsc": "tsc",
     "amplify:googleCalendar": "cd amplify/backend/function/googleCalendar/src && npm run tsc && cd -"
   },
   "dependencies": {
@@ -32,6 +33,7 @@
     "amazon-cognito-identity-js": "^5.2.12",
     "amazon-cognito-identity-js-typescript": "^1.22.0",
     "aws-amplify": "^5.0.3",
+    "aws-sdk": "^2.1270.0",
     "iconsax-react-native": "^0.0.8",
     "react": "18.0.0",
     "react-native": "0.69.1",
@@ -57,7 +59,8 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-test-renderer": "18.0.0"
+    "react-test-renderer": "18.0.0",
+    "typescript": "^4.9.3"
   },
   "jest": {
     "preset": "react-native"
