--- a/app/amplify/#current-cloud-backend/backend-config.json
+++ b/app/amplify/#current-cloud-backend/backend-config.json
@@ -42,7 +42,8 @@
     "googleCalendar": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": []
     }
   }
 }
